--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,60 @@
 *.png
+
+# Dependencies
+node_modules/
+jspm_packages/
+
+# Build output
+dist/
+build/
+out/
+
+# Production logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Local environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Testing
+coverage/
+jest-html-reporters-*.html
+
+# Cache
+.cache/
+.next/
+.tmp/
+.parcel-cache/
+.eslintcache
+.babel-cache/
+.stylelintcache
+
+# Misc
+*.log
+*.gz
+*.zip
+
+# Optional lockfiles (depending on team policy)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
