--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
     "d3": "^7.9.0",
     "react": "^19.1.1",
